--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.21'
+          go-version: '1.24.0'
           cache: false
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v4
@@ -34,7 +34,7 @@ jobs:
         run: go fmt ./...
 
       - name: Build
-        run: go build -v ./...
+        run: go build -v ./... -race
 
-      - name: Test with the Go CLI
-        run: go test
+      - name: Test
+        run: go test -race ./...
