--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,12 +10,29 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.24.0'
-          cache: false
+          go-version: stable
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v4
+        uses: golangci/golangci-lint-action@v8
         with:
-          version: latest
+          version: v2.1
+          config: .golangci.yml
+
+  test:
+    name: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.24.x'
+
+      - name: Install dependencies
+        run: go get .
+
+      - name: Run tests
+        run: go test -v -race ./... 
 
   build:
     runs-on: ubuntu-latest
@@ -25,16 +42,10 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21.x'
+          go-version: '1.24.x'
 
       - name: Install dependencies
         run: go get .
 
-      - name: Fmt
-        run: go fmt ./...
-
       - name: Build
-        run: go build -v ./... -race
-
-      - name: Test
-        run: go test -race ./...
+        run: go build -v ./...
